fixed missing color for links

--- a/nord-theme.scss
+++ b/nord-theme.scss
@@ -70,6 +70,10 @@ h6 {
   }
 }
 
+a {
+  color: $nord8;
+}
+
 hr {
   height: 0;
   padding-top: 0.25em;
